# DesignLearnRG_euROBIN

./: .gitignore  README.md  requirements.txt
Vision/Detection/: TaskboardDetector.cpp
Vision/Relay/: CMakeLists.txt  DataRelay.cpp  RobotDataUpdater.cpp  RobotDataUpdater.h
Vision/proto/: robot.proto  skill.proto
Vision/resource/: model_data.yaml  screen.yaml
config/: address.yaml  camera.yaml  move_slider.yaml  plug_probe.yaml  press_blue_button.yaml  press_red_button.yaml  probe_circuit.yaml  skill_list.yaml  task.yaml  wrap_cable.yaml
config/protobuf/: robot.proto  robot_pb2.py
interface/: common.py  index.html  interface.py  requirements.txt  rerun_interface.py  rerun_loader_urdf.py  rlds.py  robot_pb2.py  robot_pub.py  server.py  skill_sub.py
interface/d435i_description/meshes/: d435i.STL  d435i_bracket.STL
interface/franka_description/: panda.urdf  panda_arg85.urdf  panda_hande.urdf  panda_hande_d435i.urdf  panda_robotiq_arg85.urdf  panda_robotiq_hande.urdf
interface/protobuf/: robot.proto  robot_pb2.py  skill.proto  skill_pb2.py
interface/robotiq_arg85_description/: robotiq_arg85.urdf
interface/robotiq_hande_description/: robotiq_hande.urdf
interface/ur_description/: ur10e_hande_d435i.urdf  ur10e_robotiq_arg85.urdf  ur10e_robotiq_hande.urdf
motion/: utils.py
motion/message/: detection.proto  detection_pb2.py  request.py  vision_socket.py
motion/scripts/: execute_task.py  execute_tasks_by_order.py  read_pose.py  replay_traj.py  test_element_pos.py  test_left_plug.py  test_move_slider.py  test_press_button.py  test_probe_circuit.py  test_wrap_cable.py
motion/tasks/: base_task.py  move_slider.py  plug_left.py  plug_probe.py  press_button.py  probe_circuit.py  wrap_cable.py
src/meshes/: camera_base.STEP  camera_base.STL  fingertip.STEP  fingertip.STL  taskboard.STEP
vision/: CMakeLists.txt
vision/Detection/: CMakeLists.txt  TaskboardDetector.cpp  TaskboardDetector.h  TriangleDetector.cpp  TriangleDetector.h  inference.cpp  inference.h
vision/Relay/: DataRelay.cpp  DataRelay.h  main.cpp  resource_helper.h
vision/proto/: CMakeLists.txt  detection.proto
vision/resource/: eMc.yaml  taskboard.yaml  ur_camera.yaml
